tests/ui/associated-consts/issue-58022.stderr
error[E0790]: cannot refer to the associated constant on trait without specifying the corresponding `impl` type
  --> $DIR/issue-58022.rs:4:25
   |
LL |     const SIZE: usize;
   |     ------------------ `Foo::SIZE` defined here
LL |
LL |     fn new(slice: &[u8; Foo::SIZE]) -> Self;
   |                         ^^^^^^^^^ cannot refer to the associated constant of trait

error[E0423]: expected function, tuple struct or tuple variant, found trait `Foo`
  --> $DIR/issue-58022.rs:14:9
   |
LL |         Foo(Box::new(*slice))
   |         ^^^ not a function, tuple struct or tuple variant

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0423, E0790.
For more information about an error, try `rustc --explain E0423`.
